Revert "- Move maven-surefire-plugin adn maven-failsafe-plugin the top-level"
This reverts commit 9f04d718c1b28f7bf1d6ec024d0ac10988c8bc99.